--- a/JAYCHOUweb.html
+++ b/JAYCHOUweb.html
@@ -31,7 +31,7 @@
             </li>
         </ul>
     </nav>
-    <h2>ALBUMS 2000-2022</h2>
+    <h2>Jay Chou ALBUMS 2000-2022</h2>
 
     <div class="album1">
         <a href="album1.html" target="_blank"><img src="https://cdn.albumoftheyear.org/album/178397-jay.jpg" alt="Jay 2000" width="500px" height="500px"></a>
