Album replacement Text

--- a/album2.html
+++ b/album2.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
     <div class="intro">
-        <img src="https://i1.sndcdn.com/artworks-KDKU0cmKngZOjLdg-O7hHSw-t500x500.jpg" alt="Jay 2000" width="500px" height="500px">
+        <img src="https://i1.sndcdn.com/artworks-KDKU0cmKngZOjLdg-O7hHSw-t500x500.jpg" alt="Jay Chou Fantasy" width="500px" height="500px">
         <div class="name">
             <div class="content">
                 <p>2001年第2張專輯：《范特西》(CD+寫真)-台灣原版進口 Jay Chou 2nd album</p>
